packages/integration-tests/src/tests/errors/views/splunkrum-reporterror.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderAgent({}) %>
  <script id="scenario">
    let someNull = null;
    try {
      someNull.anyField = 'value';
    } catch(e) {
        SplunkRum.reportError(e, {
          splunkContext: {
              test: 'the whole object should be removed'
          },
          errorValueString: 'errorValue',
          errorValueNumber: 123,
          additionalAttributes: ['a', 'b', 'c']
        });
    }
  </script>
</head>
<body>
  <h1>Manual console.error</h1>
  <pre id="scenarioDisplay"></pre>
  <script>scenarioDisplay.innerHTML = scenario.innerHTML;</script>
</body>
</html>
